--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "axios": "^1.6.2",
+    "date-fns": "^3.3.1",
     "formik": "^2.4.5",
     "modern-normalize": "^2.0.0",
     "normalize.css": "^8.0.1",
